# tarn

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  tarpaulin.toml
.github/workflows/: ci.yml  commitlint.yml  pr-title.yml  release-please.yml  release.yml
src/: builder.rs  config.rs  lib.rs  main.rs
src/change/: mod.rs
src/common/: data_uri.rs  mod.rs  note_path.rs  revision_token.rs  vault_path.rs
src/core/: builder.rs  config.rs  mod.rs  responses.rs  tarn_core.rs
src/core/parser/: links.rs  note.rs  sections.rs
src/core/storage/: local.rs  mod.rs
src/index/: config.rs  errors.rs  mod.rs  tokenizer.rs  types.rs
src/index/in_memory/: bm25.rs  mod.rs  rrf.rs  scorer.rs  tags.rs
src/mcp/: helpers.rs  mod.rs  prompts.rs  query.rs  resources.rs  responses.rs  sync.rs  tools.rs
src/mcp/types/: mod.rs  render.rs  requests.rs  responses.rs  result.rs
src/note/: frontmatter.rs  mod.rs  parser.rs  sections.rs
src/note_handler/: error.rs  frontmatter.rs  links.rs  mod.rs  note.rs  sections.rs  tags.rs  tasks.rs
src/observer/: config.rs  local.rs  mod.rs
src/parser/: frontmatter.rs  links.rs  mod.rs  note.rs  sections.rs  tags.rs
src/revisions/: config.rs  errors.rs  in_memory.rs  mod.rs
src/search/: mod.rs
src/storage/: config.rs  local.rs  mod.rs
src/tokenizer/: config.rs  errors.rs  hf.rs  mod.rs  naive.rs  ngram.rs  stemming.rs
tests/: local_storage.rs  local_storage_observer.rs  mcp_integration.rs
tests/integration/: common.rs  main.rs  prompts.rs  resources.rs  tools.rs  workflows.rs
tests/vault/: Home.md  Inbox.md
tests/vault/.obsidian/: app.json  core-plugins.json  daily-notes.json
tests/vault/areas/personal/: Goals 2024.md
tests/vault/areas/personal/health/: Fitness Plan.md
tests/vault/areas/work/: Meeting Notes.md
tests/vault/daily/: 2024-01-14.md  2024-01-15.md
tests/vault/projects/: WebApp.md
tests/vault/projects/webapp/design/: Color Palette.md  UI Mockups.md
tests/vault/projects/webapp/development/: API Design.md  Database Schema.md
tests/vault/projects/webapp/docs/: Getting Started.md
tests/vault/templates/: daily.md  note.md  project.md
tests/vault/wiki/: HTTP.md  REST API.md  Rust.md
tests/vault/wiki/programming/rust/: Async Rust.md  Error Handling.md
tests/vault/wiki/programming/web/: WebSockets.md
