[package]
name = "tarn"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "~1.50", features = ["fs", "sync", "rt-multi-thread", "macros", "signal"] }
tokio-stream = "~0.1"
async-stream = "~0.3"
futures-core = "~0.3"
thiserror = "~2.0"
base64 = "~0.22"
notify = "~8.2"
regex = "~1.12"
itertools = "~0.14"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1"
yaml_serde = "~0.10"
rmcp = { version = "~1.2", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
axum = "~0.8"
schemars = "~1.0"
clap = { version = "~4", features = ["derive"] }
anyhow = "~1.0"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
tokio-util = "~0.7"

[[bin]]
name = "tarn-mcp"
path = "src/main.rs"
