[package]
name = "tarn"
version = "0.9.1"
edition = "2024"

[dependencies]
tokio = { version = "~1.50", features = ["fs", "sync", "rt-multi-thread", "macros", "signal"] }
tokio-stream = "~0.1"
async-stream = "~0.3"
futures-core = "~0.3"
thiserror = "~2.0"
base64 = "~0.22"
notify = "~8.2"
regex = "~1.12"
serde = { version = "~1.0", features = ["derive"] }
chrono = { version = "~0.4", features = ["serde"] }
serde_json = "~1"
yaml_serde = "~0.10"
rmcp = { version = "~1.2", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
axum = "~0.8"
schemars = "~1.2"
clap = { version = "~4.6", features = ["derive"] }
anyhow = "~1.0"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
dirs = "~6.0"
tokio-util = "~0.7"
tokenizers = { version = "~0.22", default-features = false, features = ["http", "fancy-regex"], optional = true }
rust-stemmers = { version = "~1.2", optional = true }
lingua = { version = "~1.8", default-features = false, features = ["english", "french", "german", "spanish", "italian", "portuguese", "dutch", "russian"], optional = true }

[features]
default = ["stemming"]
hf-tokenizer = ["dep:tokenizers"]
stemming = ["dep:rust-stemmers", "dep:lingua"]

[[bin]]
name = "tarn-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "~3.20"
rmcp = { version = "~1.2", features = ["client", "transport-child-process"] }
serde_json = "~1"
tokio = { version = "~1.50", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
